# Easydotdict

./: .gitignore  README.md  app_settings.json  docs.md  pyproject.toml
.github/workflows/: publish.yml
easydict/: __init__.py
easydotdict/: __init__.py  decorators.py  easydotdict.py
example/: api_response.py  app_config.py  config_manager.py  data_diff.py  data_migration.py  github_stars.py  product_catalog.py  reactive_config.py  validation.py
