[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "easydotdict"
version = "1.1.0"
description = "Effortless nested dictionary access — dot notation, safe missing keys, auto-vivification, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

authors = [
  {name = "draganoxfool", email = "draganogaming1@gmail.com"},
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/draganoxfool/Easydotdict"
Source = "https://github.com/draganoxfool/Easydotdict"

[tool.setuptools.packages.find]
include = ["easydotdict*"]
